Change text color, fix contrast ratio

--- a/styles/index.css
+++ b/styles/index.css
@@ -7,3 +7,7 @@
 }
 
 .slidev-code-wrapper { width: 500px; }
+
+* {
+  color: #0E1013;
+}
